# JAM-Compiler

./: CMakeLists.txt  ReadMe.md
include/: AST.hpp  exception.hpp  front_end.hpp  generall_emmiter.hpp  helper.hpp  information.txt  machine-code.hpp
src/: JAM.cpp  JLD.cpp
test/: helloWorld.asm  simple  simple.cpp  test  test.asm  test.py
